force-app/main/default/objects/Dataset_Image__c/Dataset_Image__c.object-meta.xml
<CustomObject>
    <label>Dataset Image</label>
    <nameField>
        <displayFormat>DSI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataset Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>