force-app/main/default/objects/Dataset_Image__c/fields/Dataset_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Image_Id__c</fullName>
    <label>Dataset Image Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>