force-app/main/default/objects/Dataset_Image__c/fields/Dataset_Label__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Label__c</fullName>
    <label>Dataset Label</label>
    <referenceTo>Dataset_Label__c</referenceTo>
    <relationshipLabel>Dataset Images</relationshipLabel>
    <relationshipName>Dataset_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>