force-app/main/default/objects/Dataset_Image__c/fields/Raw_Image__c.field-meta.xml
<CustomField>
    <fullName>Raw_Image__c</fullName>
    <label>Raw Image</label>
    <type>Url</type>
</CustomField>