force-app/main/default/objects/Dataset_Image__c/fields/Small_Image__c.field-meta.xml
<CustomField>
    <fullName>Small_Image__c</fullName>
    <label>Small Image</label>
    <type>Url</type>
</CustomField>